--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
   }
 }
 @theme inline {
-  /*project color*/
+  /*-project color-*/
 
   --color-blue-button:#0733AD;
   --color-post-button:#B468B4;
