--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@
   .bg-gradient-background {
     background: linear-gradient(140deg, #416080 0%, #675593 17%, #791A78 44%, #943B53 64%, #897C71 100%);
   }
+   .text-gradient-custom {
+    background-image: linear-gradient(140deg, #416080 0%, #675593 17%, #791A78 44%, #943B53 64%, #897C71 100%);
+     -webkit-background-clip: text;
+     -webkit-text-fill-color: transparent;
+     background-color: transparent;
+  }  
 }
 @theme inline {
   /*-project color-*/
